--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.RickAndMorty"
         tools:targetApi="31">
         <activity
+            android:name=".CharacterDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ListCharacterActivity"
+            android:exported="false" />
+        <activity
             android:name=".MenuActivity"
             android:exported="true">
             <intent-filter>
